--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Object Oriented PHP & MVC"]
-	path = Object Oriented PHP & MVC
-	url = https://github.com/Buniasburger/Object-Oriented-PHP-MVC
+[submodule "Object-Oriented-PHP-MVC"]
+	path = Object-Oriented-PHP-MVC
+	url = https://github.com/Buniasburger/Object-Oriented-PHP-MVC.git
